--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   },
   "dependencies": {
     "@astrojs/db": "^0.18.0",
-    "astro": "^5.13.8"
+    "@libsql/client": "^0.15.15",
+    "astro": "^5.14.0",
+    "better-sqlite3": "^12.4.1",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "drizzle-kit": "^0.31.4",
     "prettier": "^3.6.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "tsx": "^4.20.6"
   }
 }
